--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "build": "tsc -b",
+    "build": "tsc -b",
     "start": "node ./dist/index.js",
     "dev": "npm run build && npm run start"
   },
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-   
+    "@types/jsonwebtoken": "^9.0.7",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
