--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -20,6 +20,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/ws": "^8.5.13",
     "@repo/backend-common": "workspace:*",
-    "@repo/common": "workspace:*"
+    "@repo/common": "workspace:*",
+    "@repo/db": "workspace:*"
   }
 }
